# advent-of-code

./: .gitignore  README.md
07/: adventofcode_07_part2.py
2020/: 07_part1.py  07_part2.py
2020/07/: adventofcode_07_part1.py  adventofcode_07_part2.py
2021/: 01_SonarSweep.ipynb  02_Dive.ipynb  03_BinaryDiagnostic.ipynb  04_GiantSquid.ipynb  05_HydrothermalVenture.ipynb  06_Lanternfish.ipynb  07_TheTreacheryOfWhales.ipynb  08_seven_segment_search.ipynb  09_smoke_basin.ipynb  10_syntax_scoring.ipynb  11_dumbo_octopus.ipynb  12_passage_pathing.ipynb  13_transparent_origami.ipynb  14_extended_polymerization.ipynb
2021/01/: 01_SonarSweep.ipynb
2021/02/: 02_Dive.ipynb
2022/python/: 01_Calorie_Counting.py  02_Rock_Paper_Scissors.ipynb  02_Rock_Paper_Scissors.py  03_Rucksack_Reorganization.ipynb  04_Camp_Cleanup.ipynb  05_Supply_Stacks.ipynb  06_Tuning_Trouble.ipynb  07_No_Space_Left.ipynb  08_Treetop_Tree_House.ipynb
2023/nim/: trebuchet.nim
2023/python/: 01_trebuchet.ipynb  02_cube.ipynb  03_gear_ratios.ipynb  04_scratchcards.ipynb  05_seeds_and_fertilizers.ipynb  06_wait_for_it.ipynb  07_camel_cards.ipynb  08_haunted_wasteland.ipynb  09_mirage_maintenance.ipynb  10_pipe_maze.ipynb  11_cosmic_expansion.ipynb  12_hot_springs.ipynb  13_point_of_incidence.ipynb  14_parabolic_reflector.ipynb  16_floor_will_be_lava.ipynb  18_lavaduct_lagoon.ipynb
2023/rust/: Cargo.toml
2025/cpp/: .clang-format  01.cpp  CMakeLists.txt  Makefile
2025/cpp/src/: 03.cpp  04.cpp  05.cpp  06.cpp
2025/python/: 01.py  02.py  03.py  04.py  05.py  06.py  09.py  pyproject.toml
